# MatchingEngine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: matching_engine.cpp.6F0C9116C43F2641.idx  matching_engine.h.92DC4F403CA35F75.idx  order.h.FBF7F663719D8417.idx  order_book.cpp.6786472486F258C0.idx  order_book.h.2ECAF1F76FE9FF1C.idx  test_smoke.cpp.ABE0C3D6E8A5C77F.idx  trade.h.F2D0E9F17CFDD680.idx  types.h.610440951D19886B.idx
benchmarks/: CMakeLists.txt
context/: ACTION_PLAN.md  IMPLEMENTATION_BRIEF.md  PRD_Cpp_Matching_Engine.md
include/me/: matching_engine.h  order.h  order_book.h  types.h
src/: matching_engine.cpp  order_book.cpp
tests/: CMakeLists.txt  test_smoke.cpp
